Add SEO for gh-pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Type Anywhere !</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Easy search module powered by the powerness of Javascript">
+    <link rel="author" href="https://plus.google.com/u/0/110592770316565776182/posts?partnerid=gplp0"/>
 
     <!-- Loading Bootstrap -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
